Applied OpenRewrite recipe "Migrate to Java 17".
Signed-off-by: Jacek Bilski <jacek@bilski.tech>